--- a/app/template/index.html
+++ b/app/template/index.html
@@ -1,8 +1,9 @@
 <div>
     <div class="head">
-        {{title}}
+        <input style="float: right;"  type="text" [(ngModel)]="title">
+        <div >
+            {{title}}
+        </div>
     </div>
     <div class="my-map">Loading map..</div>
-
-
 </div>
