--- a/app/template/index.html
+++ b/app/template/index.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="head">
+    <div class="root-head">
         <input style="float: right;"  type="text" [(ngModel)]="title">
         <div >
             {{title}}
