--- a/app/less/index.less
+++ b/app/less/index.less
@@ -14,3 +14,11 @@
   position: absolute;
   bottom: 0;
 }
+.help-coordinate{
+  .lat-lng-cell{
+    min-width: 200px;
+  }
+}
+.inline-block{
+  display: inline-block;
+}
