--- a/app/template/help-coordinate.html
+++ b/app/template/help-coordinate.html
@@ -1,3 +1,9 @@
 <div class="help-coordinate">
-  Latitude  {{latLng.lat}}
+  <div class="inline-block lat-lng-cell">
+    Lat  {{latLng.lat}}
+  </div>
+  <div class="inline-block lat-lng-cell">
+    Lon {{latLng.lng}}
+  </div>
+
 </div>
