--- a/app/less/index.less
+++ b/app/less/index.less
@@ -1,5 +1,6 @@
 *{
   margin: 0;
+  font-family:  Geneva, Arial, Helvetica, sans-serif;
 }
 .leaflet-control-container{
   .leaflet-top.leaflet-left{
@@ -16,7 +17,9 @@
 }
 .help-coordinate{
   .lat-lng-cell{
-    min-width: 200px;
+    min-width: 170px;
+    color: #e5e5e5;
+    text-shadow: 0 0 2px black, 0 0 2px black;
   }
 }
 .inline-block{
