--- a/app/less/index.less
+++ b/app/less/index.less
@@ -2,6 +2,19 @@
   margin: 0;
   font-family:  Geneva, Arial, Helvetica, sans-serif;
 }
+
+
+.root-head , .my-map{
+  width:100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+.my-map{
+  z-index: 0;
+}
+
 .leaflet-control-container{
   .leaflet-top.leaflet-left{
     right: 0;
@@ -22,6 +35,7 @@
     text-shadow: 0 0 2px black, 0 0 2px black;
   }
 }
+
 .inline-block{
   display: inline-block;
 }
