--- a/app/less/index.less
+++ b/app/less/index.less
@@ -1,7 +1,10 @@
+
 *{
   margin: 0;
   font-family:  Geneva, Arial, Helvetica, sans-serif;
 }
+@import "constant";
+
 
 
 .root-head , .my-map{
@@ -30,9 +33,10 @@
 }
 .help-coordinate{
   .lat-lng-cell{
-    min-width: 170px;
-    color: #e5e5e5;
-    text-shadow: 0 0 2px black, 0 0 2px black;
+    font-size: 10px;
+    min-width: 100px;
+    color: #232429;
+    text-shadow: 0 0 2px #dbf2fc;
   }
 }
 
