--- a/app/template/help-coordinate.html
+++ b/app/template/help-coordinate.html
@@ -1,9 +1,9 @@
 <div class="help-coordinate">
   <div class="inline-block lat-lng-cell">
-    Lat  {{latLng.lat}}
+    Lat  {{mymapEvents.mouseLat}}
   </div>
   <div class="inline-block lat-lng-cell">
-    Lon {{latLng.lng}}
+    Lng {{mymapEvents.mouseLng}}
   </div>
 
 </div>
