map lat lang move end

--- a/app/less/index.less
+++ b/app/less/index.less
@@ -5,8 +5,6 @@
 }
 @import "constant";
 
-
-
 .root-head , .my-map{
   width:100%;
   position: absolute;
@@ -33,10 +31,13 @@
 }
 .help-coordinate{
   .lat-lng-cell{
-    font-size: 10px;
+    font-size: 12px;
     min-width: 100px;
     color: #232429;
     text-shadow: 0 0 2px #dbf2fc;
+    &:first-child{
+      min-width: 50px;
+    }
   }
 }
 
