--- a/app/template/help-coordinate.html
+++ b/app/template/help-coordinate.html
@@ -1,9 +1,26 @@
 <div class="help-coordinate">
-  <div class="inline-block lat-lng-cell">
-    Lat  {{mymapEvents.mouseLat}}
-  </div>
-  <div class="inline-block lat-lng-cell">
-    Lng {{mymapEvents.mouseLng}}
-  </div>
+    <div class="table">
+        <div class="table-cell lat-lng-cell">
+            Mouse
+        </div>
+        <div class="table-cell lat-lng-cell">
+            Lat {{mymapEvents.mouseLat}}
+        </div>
+        <div class="table-cell lat-lng-cell">
+            Lng {{mymapEvents.mouseLng}}
+        </div>
+    </div>
+    <div class="table">
+        <div class="table-cell lat-lng-cell">
+            Map
+        </div>
+        <div class="table-cell lat-lng-cell">
+            Lat {{mymapEvents.mapLat}}
+        </div>
+        <div class="table-cell lat-lng-cell">
+            Lng {{mymapEvents.mapLng}}
+        </div>
+
+    </div>
 
 </div>
