--- a/app/less/constant.less
+++ b/app/less/constant.less
@@ -1,6 +1,18 @@
+
+
 .table{
   display: table;
 }
 .table-cell{
   display: table-cell;
+}
+.inline-block{
+  display: inline-block;
+}
+.row{
+  padding: 8px;
+
+}
+.border-bottom{
+  border-bottom: 1px solid darkgray;
 }
