--- a/app/less/index.less
+++ b/app/less/index.less
@@ -5,7 +5,7 @@
 }
 @import "constant";
 
-.root-head , .my-map{
+.my-map{
   width:100%;
   position: absolute;
   left: 0;
@@ -40,7 +40,46 @@
     }
   }
 }
-
-.inline-block{
-  display: inline-block;
+button.menu{
+  padding: 0;
+  border: none;
+  width: 40px;
+  height: 40px;
+  outline: none;
+  background: rgba(255, 255, 255, 0.42);
+  &:hover{
+    background: white;
+  }
+  &:active{
+    box-shadow: inset 0 0 40px gray;
+  }
 }
+
+.root-head{
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  height: 100%;
+}
+
+.main-menu{
+  &.show{
+    background: white;
+    height: 100%;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+0,0+100;White+to+Transparent */
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+0,0.11+100 */
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+0,0.2+100 */
+    background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(255,255,255,0.2) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0.2) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0.2) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#33ffffff',GradientType=1 ); /* IE6-9 */
+
+
+
+  }
+  .menu-list{
+    min-width: 300px;
+  }
+}
+
