local storage start

--- a/app/less/constant.less
+++ b/app/less/constant.less
@@ -16,3 +16,12 @@
 .border-bottom{
   border-bottom: 1px solid darkgray;
 }
+.padding-8{
+  padding: 8px;
+}
+.vertical-middle{
+  vertical-align: middle;
+}
+.bold{
+  font-weight: bold;
+}
