--- a/app/template/menu.html
+++ b/app/template/menu.html
@@ -1,19 +1,22 @@
 <div class="main-menu" [ngClass]="{show:show}">
-    <div class="table">
+    <div class="table width-100">
         <div class="table-cell">
             <button class="menu" (click)="clicked()">
                 <i class="material-icons">menu</i>
             </button>
         </div>
-        <div class="table-cell padding-8 vertical-middle bold">
+        <div class="table-cell vertical-middle padding-8 bold">
             {{userName}}
         </div>
     </div>
 
     <template [ngIf]="show">
         <div class="menu-list">
-            <div class="row border-bottom">
-            ff
+            <div class="register-block">
+                <button>
+                    Регистрация
+                </button>
+
             </div>
         </div>
     </template>
