--- a/app/less/index.less
+++ b/app/less/index.less
@@ -46,12 +46,14 @@ button.menu{
   width: 40px;
   height: 40px;
   outline: none;
+  border-radius: 50%;
 
   &:hover{
     background: @color-button;
   }
   &:active{
     box-shadow: inset 0 0 40px gray;
+    color: gray;
   }
 }
 
