local storage start

--- a/app/template/index.html
+++ b/app/template/index.html
@@ -2,6 +2,10 @@
     <div class="root-head">
 
     </div>
+    <div class="menu-list">
+
+    </div>
+
     <div class="my-map">Loading map..</div>
     <div class="footer-menu">
 
