--- a/app/template/menu.html
+++ b/app/template/menu.html
@@ -1,4 +1,4 @@
-<div class="main-menu" [ngClass]="{show:show}">
+<div class="main-menu">
     <div class="table width-100">
         <div class="table-cell">
             <button class="menu" (click)="clicked()">
@@ -10,7 +10,7 @@
         </div>
     </div>
 
-    <template [ngIf]="show">
+    <!--<template [ngIf]="show">
         <div class="menu-list">
             <div class="register-block">
                 <button>
@@ -19,5 +19,5 @@
 
             </div>
         </div>
-    </template>
+    </template>-->
 </div>
