--- a/app/less/index.less
+++ b/app/less/index.less
@@ -90,5 +90,19 @@ button.menu{
   .register-block{
     position: absolute;
     bottom: 0;
+    background: white;
   }
+}
+.enter-regist{
+  position: fixed;
+  width: 300px;
+  left: 50%;
+  margin-left: -150px;
+  z-index: 2;
+  background: white;
+}
+.row:after, .row:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
