--- a/app/template/index.html
+++ b/app/template/index.html
@@ -1,10 +1,14 @@
 <div>
     <div class="root-head">
-
     </div>
+
     <div class="menu-list">
+    </div>
+
+    <div class="enter-regist">
 
     </div>
+
 
     <div class="my-map">Loading map..</div>
     <div class="footer-menu">
