--- a/app/template/enter-regist.html
+++ b/app/template/enter-regist.html
@@ -3,15 +3,19 @@
         <div style="margin: 8px">
             <div class="row">
                 <div>
-                    <input class="width-100" type="text">
+                    <input class="width-100" type="text" placeholder="Логин">
                 </div>
 
             </div>
             <div class="row">
                 <div>
-                    <input class="width-100" type="text">
+                    <input class="width-100" type="text" placeholder="Пароль">
                 </div>
-
+            </div>
+            <div class="row">
+                <div>
+                    <input class="width-100" type="text" placeholder="Пароль повторно">
+                </div>
             </div>
         </div>
         <div class="button-container">
