--- a/index.jade
+++ b/index.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
     head
         title Вело атлас
-        link(rel="shortcut icon" href="src/img/T.png" type="image/png")
+        link(rel="shortcut icon" href="src/img/icon.png" type="image/png")
         base(href="/")
         script(src='node_modules/core-js/client/shim.min.js')
         script(src='node_modules/zone.js/dist/zone.js')
