--- a/index.jade
+++ b/index.jade
@@ -5,9 +5,9 @@ html(lang='en')
         link(rel="shortcut icon" href="src/img/icon.png" type="image/png")
         base(href="/")
         script(src='node_modules/core-js/client/shim.min.js')
-        script(src='node_modules/zone.js/dist/zone.js')
+        script(src='node_modules/zone.js/dist/zone.min.js')
         script(src='node_modules/reflect-metadata/Reflect.js')
-        script(src='node_modules/systemjs/dist/system.src.js')
+        script(src='node_modules/systemjs/dist/system.js')
         script(src='systemjs.config.js')
         script.
             System.import('app').catch(function(err){ console.error(err); });
