--- a/index.jade
+++ b/index.jade
@@ -4,6 +4,9 @@ html(lang='en')
         title Вело атлас
         link(rel="shortcut icon" href="src/img/icon.png" type="image/png")
         base(href="/")
+
+        script(src='lib/leaflet/leaflet.js')
+
         script(src='node_modules/core-js/client/shim.min.js')
         script(src='node_modules/zone.js/dist/zone.min.js')
         script(src='node_modules/reflect-metadata/Reflect.js')
