--- a/index.jade
+++ b/index.jade
@@ -4,9 +4,8 @@ html(lang='en')
         title Вело атлас
         link(rel="shortcut icon" href="src/img/icon.png" type="image/png")
         base(href="/")
-
+        link(rel="stylesheet" href="lib/leaflet/leaflet.css")
         script(src='lib/leaflet/leaflet.js')
-
         script(src='node_modules/core-js/client/shim.min.js')
         script(src='node_modules/zone.js/dist/zone.min.js')
         script(src='node_modules/reflect-metadata/Reflect.js')
@@ -18,6 +17,11 @@ html(lang='en')
             * {
                 margin: 0;
                 padding: 0;
+
+            }
+            html, body{
+                width: 100%;
+                height: 100%;
             }
     body
         my-app Loading...
