--- a/src/app/less/leaflet-map.component.less
+++ b/src/app/less/leaflet-map.component.less
@@ -1,12 +1,20 @@
 leaflet-map{
 //color: red;
-  position: absolute;
+ // position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
 }
-ng-component{
-  width: 100%;
-  height: 100%;
+:host {
+  display: block;
+  border: 1px solid black;
+}
+:host-context {
+  display: block;
+  border: 1px solid black;
+}
+:host-content {
+  display: block;
+  border: 1px solid black;
 }
