--- a/index.jade
+++ b/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title Вело атлас
+        title My Map
         link(rel="shortcut icon" href="src/img/icon.png" type="image/png")
         base(href="/")
         link(rel="stylesheet" href="lib/leaflet/leaflet.css")
