--- a/src/app/less/leaflet-map.component.less
+++ b/src/app/less/leaflet-map.component.less
@@ -1,20 +1,29 @@
-leaflet-map{
-//color: red;
- // position: absolute;
+
+:host {
+  position: absolute;
+  border-radius: 4px;
   left: 0;
   top: 0;
+  display: block;
   width: 100%;
   height: 100%;
-}
-:host {
-  display: block;
-  border: 1px solid black;
+  z-index: 0;
+  leaflet-map{
+    background: blue;
+    width: 100%;
+    display: block;
+    height: 100%;
+    z-index: 0;
+  }
 }
 :host-context {
   display: block;
-  border: 1px solid black;
+  //border: 1px solid black;
 }
-:host-content {
-  display: block;
-  border: 1px solid black;
+
+info-position{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
 }
