commit new zip pass

--- a/src/app/template/auth.component.jade
+++ b/src/app/template/auth.component.jade
@@ -1,8 +1,8 @@
 table
     tbody
-        tr
+        tr.menu
             td
                 menu
-        tr
+        tr.other
             td
                 router-outlet
