--- a/src/app/css/auth.component.css
+++ b/src/app/css/auth.component.css
@@ -1,13 +1,16 @@
-* {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
 :host {
-  position: absolute;
-  left: 0;
-  top: 0;
   display: block;
   width: 100%;
   height: 100%;
+}
+table {
+  width: 100%;
+  height: 100%;
+}
+table tr.menu {
+  height: 50px;
+}
+table tr.other {
+  height: 100%;
+  background: gray;
 }
