--- a/src/app/less/auth.component.less
+++ b/src/app/less/auth.component.less
@@ -1,14 +1,18 @@
-*{
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
+
 
 :host {
-  position: absolute;
-  left: 0;
-  top: 0;
   display: block;
   width: 100%;
   height: 100%;
+}
+table{
+  width: 100%;
+  height: 100%;
+  tr.menu{
+    height: 50px;
+  }
+  tr.other{
+    height:  100%;
+    background: gray;
+  }
 }
