--- a/index.jade
+++ b/index.jade
@@ -39,7 +39,16 @@ html(lang='en')
             * {
                 margin: 0;
                 padding: 0;
+                font-family: Geneva, Arial, Helvetica, sans-serif;
 
+            }
+            table{
+                border-spacing: 0;
+            }
+            table tr td{
+                border-collapse: collapse;
+                border: none;
+                border-spacing: 0;
             }
             html, body{
                 width: 100%;
