--- a/src/app/less/map.component.less
+++ b/src/app/less/map.component.less
@@ -2,5 +2,11 @@
   display: block;
   position: relative;
   height: 100%;
+  width: 100%;
   box-sizing: border-box;
+  mapbox-gl{
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 }
