socket connect ok

--- a/src/app/component/info-position/info-position-component.jade
+++ b/src/app/component/info-position/info-position-component.jade
@@ -1,5 +1,12 @@
 table
     tr
+        td zoom: {{mapService.zoom}}
+        td
+            |bearing: {{mapService.bearing}}
+        td
+            |pitch: {{mapService.pitch}}
+
+    tr
         td
             | Mouse
         td
