--- a/src/app/component/info-position/info-position.less
+++ b/src/app/component/info-position/info-position.less
@@ -1,4 +1,5 @@
 :host{
+  min-width: 300px;
   position: absolute;
   z-index: 2;
   bottom:0;
@@ -7,8 +8,10 @@
   background: white;
   background: linear-gradient(to right, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.7) 70%,rgba(255,255,255,0) 100%);
 }
-
+table{
+  width: 100%;
+}
 table tr td{
-  padding: 8px;
+  padding: 4px;
   font-size: 14px;
 }
