--- a/index.jade
+++ b/index.jade
@@ -2,12 +2,12 @@ doctype html
 html(lang='en')
     head
         title My Map
+
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
+
         link(rel="shortcut icon" href="src/img/icon.png" type="image/png")
         base(href="/")
-        link(rel="stylesheet" href="lib/leaflet/leaflet.css")
         link(rel="stylesheet" href="lib/mapbox-gl/mapbox-gl.css")
-        script(src='lib/leaflet/leaflet.js')
-        script(src='lib/mapbox-gl/mapbox-gl.js')
         script(src='node_modules/core-js/client/shim.min.js')
         script(src='node_modules/zone.js/dist/zone.min.js')
         script(src='node_modules/reflect-metadata/Reflect.js')
