--- a/src/app/component/menu/menu.component.less
+++ b/src/app/component/menu/menu.component.less
@@ -2,6 +2,7 @@
 :host{
   color: white;
   background-color: black;
+  position: relative;
   display: block;
   width: 100%;
   height: 100%;
@@ -12,6 +13,7 @@ table {
   width: 100%;
   td{
     height: 100%;
+    width: 100%;
     padding: 0 15px;
     cursor: pointer;
     transition: background-color .1s;
@@ -19,6 +21,9 @@ table {
       text-align: center;
       &:hover{
         background-color: @menu-hover;
+      }
+      &.menu{
+        width: 60px;
       }
       &.enter{
         width: 60px;
