menu load track start

--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -6,5 +6,5 @@
     <td class="button enter">Войти</td>
   </tr>
 </table>
-<!--menu-main(*ngIf="ms.menuOpen")-->
 <menu-track *ngIf="ms.menuOpen"></menu-track>
+<menu-track-load *ngIf="ms.menuLoadOpen"></menu-track-load>
