--- a/src/app/component/menu/menu.component.jade
+++ b/src/app/component/menu/menu.component.jade
@@ -3,5 +3,5 @@ table
         td.button.menu( (click)="onOpen()" ) Маршрут
         td
         td.button.enter Войти
-//menu-main(*ngIf="ms.menuOpen")
 menu-track(*ngIf="ms.menuOpen")
+menu-track-load(*ngIf="ms.menuLoadOpen")
