--- a/index.jade
+++ b/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title My Map
+        title Atlas A2
 
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
 
