--- a/src/app/component/menu/menu.component.jade
+++ b/src/app/component/menu/menu.component.jade
@@ -5,3 +5,5 @@ table
         td.button.enter Войти
 menu-track(*ngIf="ms.menuOpen")
 menu-track-load(*ngIf="ms.menuLoadOpen")
+track-list(*ngIf="trackList.length")
+//track-list
