--- a/src/app/component/menu/menu-track/load/menu-load-track.jade
+++ b/src/app/component/menu/menu-track/load/menu-load-track.jade
@@ -1,5 +1,6 @@
 form(id="file-form" enctype="multipart/form-data" action="php/upload.php" method="POST")
+    div Допускается *.gpx файл
     input(type="hidden" name="afile" value="30000")
     input(name="afile" id="file-select" type="file" style="display: none")
     button( (click)="onSelect($event)" ) Выбрать файл
-    button(type="submit", id="upload-button", value="Send File", (click)="onSubmit($event)") Отобразить
+    //button(type="submit", id="upload-button", value="Send File", (click)="onSubmit($event)") Отобразить
