--- a/src/app/component/menu/menu-track/menu-track.jade
+++ b/src/app/component/menu/menu-track/menu-track.jade
@@ -1,7 +1,7 @@
 ul
     li( *ngFor="let item of menu", (click)="onSelect(item\, $event, $this)")
         div {{item.text}}
-        form(enctype="multipart/form-data" action="php/upload.php" method="POST", style="display: none")
+        form(enctype="multipart/form-data", action="php/upload.php" method="POST", style="display: none")
             div Допускается *.gpx файл
             input(type="hidden" name="afile" value="30000")
             input(name="afile" id="file-select" type="file" style="display: none")
