--- a/src/app/component/menu/track-list/track-list.jade
+++ b/src/app/component/menu/track-list/track-list.jade
@@ -4,5 +4,5 @@ div
         li( *ngFor="let track of list\; let i = index" ,  [style.background]="track.color")
 
             .del( (click)='hideTrack(track)') &#215;
-            .go( (click)="onGo(track)") go
+            .go( (click)="onGo(track)") &#9658;
             div {{i}}: {{track.distance}} km
