--- a/src/app/component/menu/track-list/track-list.less
+++ b/src/app/component/menu/track-list/track-list.less
@@ -16,8 +16,17 @@
   display: block;
   float: right;
   margin-right: 10px;
+  //padding: 8px;
+  &:active{
+    color: white;
+    transform: scaleX(0.8, 0,8);
+    box-shadow: inset 0 0 20px black;
+  }
 }
 li{
-  padding: 8px;
+  //padding: 8px;
   color: black;
+  &>div{
+    padding: 8px;
+  }
 }
