--- a/index.jade
+++ b/index.jade
@@ -37,5 +37,11 @@ html(lang='en')
                 width: 100%;
                 height: 100%;
             }
-    body
+            .clear {
+                float: none!important;
+                clear: both!important;
+                border-bottom: 1px solid transparent;
+                margin-top: -1px;
+            }
+body
         my-app Loading...
