create db and table user

--- a/src/app/component/registration/registration.component.jade
+++ b/src/app/component/registration/registration.component.jade
@@ -3,7 +3,7 @@ div.content
         label Имя
         input(type="text" name='_name')
         label Пароль
-        input( type="password" name='_pass')
+        input( type="password", name='_pass', [(ngModel)]="pass1")
         label Пароль
         input( type="password" name='_pass')
         .button-container
