--- a/src/app/component/toast/toast.component.less
+++ b/src/app/component/toast/toast.component.less
@@ -8,6 +8,20 @@
   height: initial;
 }
 div{
+  margin: 10px;
   padding: 10px 15px;
   background: white;
+}
+
+@keyframes MyAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.my-animation {
+  animation: MyAnimation 0.2s;
 }
