--- a/src/app/component/registration/registration.component.jade
+++ b/src/app/component/registration/registration.component.jade
@@ -1,11 +1,11 @@
 div.content
     form(name='reg')
         label Имя
-        input(type="text" name='_name')
+        input(type="text" name='_name', [(ngModel)]="name")
         label Пароль
         input( type="password", name='_pass', [(ngModel)]="pass1")
         label Пароль
-        input( type="password" name='_pass')
+        input( type="password", name='_pass', [(ngModel)]="pass2")
         .button-container
             div()
                 button( (click)="onCancel()" ) Cancel
