--- a/src/app/component/registration/registration.component.less
+++ b/src/app/component/registration/registration.component.less
@@ -1,3 +1,4 @@
+@import "../../css/constant";
 :host{
   position: absolute;
   left: 0;
@@ -7,11 +8,11 @@
 }
 
 .content{
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.9);
   max-width: 400px;
   margin: 20px auto;
   padding: 30px;
-  box-shadow: 0 2px 10px rgba(0, 0 ,0, 0.5);
+  box-shadow: @box-shadow;
 }
 
 input{
