--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -1,1 +1,5 @@
 @menu-hover: rgba(202, 232, 255, 0.7);
+@danger-background: red;
+@warning-background: #ffd263;
+@success-background: #7ddc74;
+@box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
