--- a/src/app/component/registration/registration.component.jade
+++ b/src/app/component/registration/registration.component.jade
@@ -1,5 +1,5 @@
 div.content
-    form(name='reg')
+    form(name='reg',  (submit)="onSubmit($event)")
         label Имя
         input(type="text" name='_name', [(ngModel)]="name")
         label Пароль
@@ -8,7 +8,7 @@ div.content
         input( type="password", name='_pass', [(ngModel)]="pass2")
         .button-container
             div()
-                button( (click)="onCancel()" ) Cancel
-                button((click)="onOk()") Ok
+                button( style="float: right", (click)="onOk($event)") Ok
+                button( (click)="onCancel($event)" ) Cancel
             .clear
 
