--- a/src/app/component/menu/menu-login/menu-login.less
+++ b/src/app/component/menu/menu-login/menu-login.less
@@ -26,8 +26,30 @@ label{
 }
 p{
   padding: 8px 0 ;
+  text-align: center;
 }
 a{
   cursor: pointer;
   color: white;
+
+}
+.button-container>div{
+  margin: 15px 0;
+  &:not(:first-child){
+
+  }
+}
+button{
+  padding: 8px 15px;
+  border: none;
+  background: white;
+  border-radius: 2px;
+  cursor: pointer;
+  outline:none;
+  width: 100%;
+  box-shadow: 1px 2px 5px rgba(0,0,0,0.3);
+  &:active{
+    color: #999999;
+    box-shadow: none;
+  }
 }
