--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -3,3 +3,25 @@
 @warning-background: #ffd263;
 @success-background: #7ddc74;
 @box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+
+.button-container>div{
+  float: right;
+  margin-top: 15px;
+  &:not(:first-child){
+
+  }
+}
+button{
+  padding: 8px 15px;
+  margin-left: 8px;
+  border: none;
+  background: white;
+  border-radius: 2px;
+  cursor: pointer;
+  outline:none;
+  box-shadow: 1px 2px 5px rgba(0,0,0,0.3);
+  &:active{
+    color: #999999;
+    box-shadow: none;
+  }
+}
