--- a/src/app/component/menu/menu.component.jade
+++ b/src/app/component/menu/menu.component.jade
@@ -8,5 +8,6 @@ menu-track(*ngIf="ms.menuOpen")
 menu-track-load(*ngIf="ms.menuLoadOpen")
 track-list(*ngIf="trackList.length", [style.top]="ms.menuOpen ?  '150px' : '100%' ")
 menu-login(*ngIf="ms.menuOpenLogin")
+device-list()
 
 //track-list
