--- a/src/app/component/device/device.component.jade
+++ b/src/app/component/device/device.component.jade
@@ -1,2 +1,6 @@
 div.content
     | Регистрация устройства
+    .button-container
+        div()
+            button( style="float: right", (click)="onOk($event)") Ok
+            button( (click)="onCancel($event)" ) Cancel
