--- a/index.jade
+++ b/index.jade
@@ -37,7 +37,7 @@ html(lang='en')
                 width: 100%;
                 height: 100%;
             }
-            .clear {
+            .clear, .border-hidden {
                 float: none!important;
                 clear: both!important;
                 border-bottom: 1px solid transparent;
