--- a/src/app/component/device/device.component.jade
+++ b/src/app/component/device/device.component.jade
@@ -1,6 +1,29 @@
 div.content
-    | Регистрация устройства
+    div
+        | Регистрация устройства
+
+    div.row
+        table
+            thead
+                tr
+                    td.required Имя
+                    td.required Идентификатор устройства
+                    td Телефон
+                    td
+            tbody
+                tr
+                    td
+                        input(type='text', [(ngModel)]='device.name')
+                    td
+                        input(type='text', [(ngModel)]='device.id')
+                    td
+                        input(type='text', [(ngModel)]='device.phone')
+                    td
+                        button((click)="onAdd($event)") Добавить
+
+    .border-hidden
     .button-container
         div()
             button( style="float: right", (click)="onOk($event)") Ok
             button( (click)="onCancel($event)" ) Cancel
+    .border-hidden
