--- a/src/app/component/device/device.component.less
+++ b/src/app/component/device/device.component.less
@@ -6,11 +6,48 @@
   z-index: 5;
   width: 100%;
 }
-
 .content{
   background: rgba(255, 255, 255, 0.9);
-  max-width: 400px;
+  max-width: 600px;
   margin: 20px auto;
-  padding: 30px;
+  padding: 30px 15px;
   box-shadow: @box-shadow;
+  box-sizing: border-box;
+}
+input{
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 8px;
+  outline: none;
+  border: none;
+  border-radius: 2px;
+  background: none;
+  border-bottom: 2px solid darkgrey;
+  margin: -2px;
+}
+table{
+  width: 100%;
+}
+.row{
+  margin: 0 -5px;
+}
+thead{
+  font-size: 10px;
+}
+td{
+  padding: 5px;
+  &:last-child{
+    width: 40px;
+  }
+  &.required{
+  //  padding-left: 5px;
+  }
+  &.required:after{
+    float: left;
+    padding: 0 5px;
+    content: '*';
+    display: block;
+    color: red;
+  }
 }
