--- a/src/app/component/registration/registration.component.less
+++ b/src/app/component/registration/registration.component.less
@@ -24,7 +24,7 @@ input{
   border: none;
   border-radius: 2px;
   background: none;
-  border-right: 1px solid darkgrey;
+//  border-right: 1px solid darkgrey;
   border-bottom: 2px solid darkgrey;
 
 }
