--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -10,10 +10,13 @@
   &:not(:first-child){
 
   }
+  button{
+    margin-left: 8px;
+  };
 }
 button{
   padding: 8px 15px;
-  margin-left: 8px;
+
   border: none;
   background: white;
   border-radius: 2px;
