--- a/src/app/component/device/device.component.less
+++ b/src/app/component/device/device.component.less
@@ -18,7 +18,8 @@ input{
   display: block;
   width: 100%;
   box-sizing: border-box;
-  padding: 8px;
+  padding: 8px 0;
+  font-size: 14px;
   outline: none;
   border: none;
   border-radius: 2px;
@@ -27,6 +28,7 @@ input{
   margin: -2px;
 }
 table{
+  margin-top: 15px;
   width: 100%;
 }
 .row{
