--- a/src/app/css/map.component.less
+++ b/src/app/css/map.component.less
@@ -8,5 +8,11 @@
     display: block;
     width: 100%;
     height: 100%;
+
+    .mapboxgl-popup-content{
+      padding: 5px;
+      font: 12px/12px  Geneva, Arial, Helvetica, sans-serif;
+      font-size: 14px;
+    }
   }
 }
