--- a/src/app/component/menu/menu-login/menu-login.less
+++ b/src/app/component/menu/menu-login/menu-login.less
@@ -3,14 +3,13 @@
   right: 0;
   top: 100%;
   z-index: 3;
-  padding:15px;
+  //padding:15px;
   width: 200px;
-  background-color: rgba(0,0,0,0.8);
+  //background-color: rgba(0,0,0,0.8);
 }
 
 input{
   display: block;
-
   width: 100%;
   box-sizing: border-box;
   padding: 8px;
@@ -19,6 +18,16 @@ input{
   border-radius: 2px;
 
 }
+
+ul li{
+  cursor: pointer;
+  background-color: rgba(0,0,0,0.8);
+  padding: 15px;
+  &:hover{
+    background-color: rgba(0,0,0,0.6);
+  }
+}
+
 label{
   display: block;
   margin: 8px 0;
