--- a/src/app/component/menu/menu-athlete/menu.athlete.component.less
+++ b/src/app/component/menu/menu-athlete/menu.athlete.component.less
@@ -1,14 +1,15 @@
 :host{
-  //background-color: rgba(0,0,0,0.8);
   position: absolute;
-  left: 80px;
+  left: 0;
   top: 100%;
   z-index: 2;
 }
+
 ul li{
   cursor: pointer;
   background-color: rgba(0,0,0,0.8);
   padding: 15px;
+  min-width: 80px;
   &:hover{
     background-color: rgba(0,0,0,0.6);
   }
