--- a/index.jade
+++ b/index.jade
@@ -3,7 +3,14 @@ html(lang='en')
     head
         title Atlas A2
 
-        meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0", property="og:image")
+        meta(property="og:title" content="AddThis Tour")
+        meta(property="og:description" content="Watch the AddThis Tour video.")
+        meta(property="og:image" content="http://i2.ytimg.com/vi/1F7DKyFt5pY/default.jpg")
+        meta(property="og:video" content="http://www.youtube.com/v/1F7DKyFt5pY&fs=1" )
+        meta(property="og:video:width" content="560")
+        meta(property="og:video:height" content="340")
+        meta( property="og:video:type" content="application/x-shockwave-flash")
 
         link(rel="shortcut icon" href="src/img/icon.png" type="image/png")
         base(href="/")
