--- a/src/app/component/menu/menu.component.jade
+++ b/src/app/component/menu/menu.component.jade
@@ -1,7 +1,7 @@
 table
     tr
         td.button.menu((click)="onOpenAthlete()") Участники
-        td.button.menu( (click)="onOpen()" ) Маршрут
+        td.button.menu( (click)="onOpen()" ) Маршруты
         td
         td.button.enter( (click)="onOpenLogin()")
             |{{as.userName || 'Войти' }}
