--- a/src/app/component/menu/menu-athlete/menu.athlete.component.less
+++ b/src/app/component/menu/menu-athlete/menu.athlete.component.less
@@ -1,3 +1,4 @@
+@import "../../../css/constant";
 :host{
   position: absolute;
   left: 0;
@@ -6,11 +7,5 @@
 }
 
 ul li{
-  cursor: pointer;
-  background-color: rgba(0,0,0,0.8);
-  padding: 15px;
-  min-width: 80px;
-  &:hover{
-    background-color: rgba(0,0,0,0.6);
-  }
+  .ul-li();
 }
