--- a/src/app/component/menu/menu-track/menu-track.less
+++ b/src/app/component/menu/menu-track/menu-track.less
@@ -1,3 +1,4 @@
+@import "../../../css/constant";
 :host{
   //background-color: rgba(0,0,0,0.8);
   position: absolute;
@@ -6,10 +7,5 @@
   z-index: 2;
 }
 ul li{
-  cursor: pointer;
-  background-color: rgba(0,0,0,0.8);
-  padding: 15px;
-  &:hover{
-    background-color: rgba(0,0,0,0.6);
-  }
+  .ul-li();
 }
