--- a/src/app/component/menu/menu.component.less
+++ b/src/app/component/menu/menu.component.less
@@ -1,12 +1,12 @@
 @import "../../css/constant";
 :host{
-  color: white;
-  background-color: black;
+  color: @main-text-color;
+  background-color: @main-menu-color;
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid @main-border-color;
 }
 table {
   height: 40px;
