--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -1,4 +1,7 @@
-@menu-hover: rgba(202, 232, 255, 0.7);
+@menu-hover: #c6c8cb;
+@main-menu-color: #e9ebee;
+@main-border-color: #9ba8b2;
+@main-text-color: #2d3134;
 @danger-background: red;
 @warning-background: #ffd263;
 @success-background: #7ddc74;
@@ -14,9 +17,18 @@
     margin-left: 8px;
   };
 }
+.ul-li(){
+  cursor: pointer;
+  background-color:  rgba(255, 255, 255, 0.8);
+  padding: 15px;
+  min-width: 80px;
+  &:hover{
+    background-color: @menu-hover;
+  }
+}
+
 button{
   padding: 8px 15px;
-
   border: none;
   background: white;
   border-radius: 2px;
