--- a/src/app/component/menu/menu.component.less
+++ b/src/app/component/menu/menu.component.less
@@ -1,7 +1,7 @@
 @import "../../css/constant";
 :host{
   color: @main-text-color;
-  background-color: @main-menu-color;
+  background: @main-menu-color;
   position: relative;
   display: block;
   width: 100%;
