--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -1,7 +1,7 @@
 @menu-hover: #c6c8cb;
-@main-menu-color: #e9ebee;
+@main-menu-color: linear-gradient(to bottom, #dae0ea 0%, #e9ebee 20%, #e9ebee 100%);
 @main-border-color: #9ba8b2;
-@main-text-color: #2d3134;
+@main-text-color: #444a56;
 @danger-background: red;
 @warning-background: #ffd263;
 @success-background: #7ddc74;
