--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -1,4 +1,4 @@
-@menu-hover: #c6c8cb;
+@menu-hover: white;
 @main-menu-color: linear-gradient(to bottom, #dae0ea 0%, #e9ebee 20%, #e9ebee 100%);
 @main-border-color: #9ba8b2;
 @main-text-color: #444a56;
