--- a/src/app/component/profile/profile.component.less
+++ b/src/app/component/profile/profile.component.less
@@ -6,7 +6,6 @@
   z-index: 5;
   width: 100%;
 }
-
 .content{
   position: absolute;
   background: rgba(255, 255, 255, 0.9);
@@ -20,6 +19,11 @@
     position: relative;
     padding: 30px;
   }
+}
+img{
+  float: left;
+  width: 100px;
+  height: 100px;
 }
 .close{
   position: absolute;
