--- a/src/app/component/menu/menu-login/menu-login.component.jade
+++ b/src/app/component/menu/menu-login/menu-login.component.jade
@@ -16,7 +16,7 @@ div((click)="$event.stopPropagation();$event.preventDefault()" )
         li
             div((click)="goToProfile()") Профиль
         li
-            a((click)="goDevice()") Устройства
+            div((click)="goDevice()") Устройства
         li
             div((click)="onExit($event)") Выйти
         //.button-container
