--- a/src/app/component/menu/menu-athlete/menu.athlete.component.less
+++ b/src/app/component/menu/menu-athlete/menu.athlete.component.less
@@ -8,7 +8,34 @@
 
 ul li{
   .ul-li();
+  min-width: 160px;
+  border-top: 1px solid #d0e2ee;
 }
 .passed{
   font-size: 10px;
+  text-align: right;
+}
+.status{
+  float: left;
+  width: 20px;
+  height: 20px;
+  margin-top: -2px;
+  border-radius: 50%;
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+  &.yellow{
+    background: yellow;
+  }
+  &.green{
+    background: #47b607;
+  }
+  &.arrow{
+    background: url("src/sprite/sprite.png");
+    background-size: 20px 80px;
+    box-shadow:none;
+    transform: rotate(45deg);
+  }
+}
+.name{
+  margin-left: 25px;
+  margin-bottom: 8px;
 }
