--- a/src/app/component/menu/menu-athlete/menu.athlete.component.less
+++ b/src/app/component/menu/menu-athlete/menu.athlete.component.less
@@ -26,7 +26,7 @@ ul li{
     background: yellow;
   }
   &.green{
-    background: #47b607;
+    background: #2ff63a;
   }
   &.arrow{
     background: url("src/sprite/sprite.png");
