--- a/src/app/component/device/device.component.less
+++ b/src/app/component/device/device.component.less
@@ -7,12 +7,37 @@
   width: 100%;
 }
 .content{
+  position: absolute;
   background: rgba(255, 255, 255, 0.9);
-  max-width: 600px;
-  margin: 20px auto;
-  padding: 30px 15px;
+  min-width: 600px;
+  margin-left: -300px;
+  padding: 0;
+  left: 50%;
+  top: calc(~"100% +"20px);
   box-shadow: @box-shadow;
-  box-sizing: border-box;
+  &>div{
+    position: relative;
+    padding: 30px;
+  }
+}
+.close{
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: darkred;
+  cursor: pointer;
+  padding: 15px;
+  font-size: 20px;
+  font: 30px/15px bold;
+}
+@media screen and (max-width: 600px){
+  .content{
+    position: relative;
+    width: 100%;
+    min-width: inherit;;
+    left: 0;
+    margin-left: 0;
+  }
 }
 input{
   display: block;
@@ -52,4 +77,16 @@ td{
     display: block;
     color: red;
   }
+  &.predelCell{
+    padding: 0;
+  }
+}
+.predel{
+  display: inline-block;
+  float: right;
+  color: darkred;
+  cursor: pointer;
+  padding: 5px;
+  font-size: 20px;
+  font: 30px/15px bold;
 }
